Findbugs fixes
git-svn-id: http://svn.codehaus.org/geoserver/branches/1.4.x@5404 ef1d6e69-97e5-0310-af46-8a06194da32a

Former-commit-id: 392ba59a3d1ab0eb83f83a000f63af2f8d76d660 [formerly aee28b606270a0525db87e8d828fd3177f020d7c]
Former-commit-id: 2874084657c0a048989fdc4ca0fed5fcc2dcf462